@@ -2,6 +2,7 @@
 	* lisp/sawfish/wm/ext/wallpaper.jl: added option to pass extra
 	arguements to wallpaper-setter
 
+	* lisp/sawfish/wm/widgets/image.jl
 	* lisp/sawfish/wm/widgets/file.jl: better widget-layout
 
 2011-05-28  Christopher Roy Bratusek <nano@tuxfamily.org>
